# nix-django

./: .gitignore  .sops.yaml  flake.nix  pyproject.toml
src/: manage.py
src/nixDjango/: asgi.py  settings.py  urls.py  wsgi.py
